--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Desktop, tablet, and mobile responsive homepage practice",
   "private": true,
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "html-bundler-webpack-plugin": "^3.17.4",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
